# udot-flix

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: optimize-faststart.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: EmptyState.tsx  HeroSection.tsx  Navbar.tsx  SettingsModal.tsx  VideoCard.tsx  VideoPlayer.tsx  VideoRow.tsx
src/data/: dummyVideos.ts
src/hooks/: useVideoLibrary.ts
src/types/: video.ts
src/utils/: formatVideoTitle.ts  isVideoFile.ts
